fix spacing

--- a/public/assets/css/mapDesktop.css
+++ b/public/assets/css/mapDesktop.css
@@ -1,12 +1,11 @@
 
 @media only screen and (min-width: 1101px) {
-  .home{
+  .home {
     width: 100%;
     height: 100vh;
     overflow: auto;
     display: flex;
     flex-direction: row;
-    
   }
   /*CSS MAP First section*/
   .map-img path {
@@ -24,7 +23,7 @@
      display: flex;
      flex-direction: row;
   }
-  svg{
+  svg {
     width: 100%;
     height: 90%;
     display: block;
@@ -71,7 +70,6 @@
     opacity: 0.5;
   }
   .show-modal-map {
-   
     opacity: 1;
     visibility: visible;
     transform: scale(1);
@@ -83,12 +81,4 @@
     font-size: 32px;
     margin-top:20px;
   }
-/*css button arrow*/
-/* .btn-down {
-  display: none;
- 
-} */
-
 }
-
-
